k8s/product/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product
spec:
  selector:
    app: product
  ports:
  - name: http-product
    protocol: TCP
    port: 80
    targetPort: 9090
